--- a/scripts/attack_exp_scripts/backdoor_attack/backdoor_badnet_fedavg_convnet2_on_femnist.yaml
+++ b/scripts/attack_exp_scripts/backdoor_attack/backdoor_badnet_fedavg_convnet2_on_femnist.yaml
@@ -12,7 +12,7 @@ train:
   local_update_steps: 2
   batch_or_epoch: epoch
 data:
-  dataset: ['train', 'val', 'test', 'poison']
+  #dataset: ['train', 'val', 'test', 'poison']
   root: data/
   type: femnist
   # form: dataloader
