--- a/scripts/attack_exp_scripts/backdoor_attack/backdoor_badnet_fedavg_convnet2_on_femnist.yaml
+++ b/scripts/attack_exp_scripts/backdoor_attack/backdoor_badnet_fedavg_convnet2_on_femnist.yaml
@@ -1,23 +1,16 @@
 use_gpu: True
 device: 0
 early_stop:
-  patience: 0
-seed: 2333
+  patience: 5
+seed: 12345
 federate:
   mode: standalone
   total_round_num: 1000
   sample_client_rate: 0.1
   client_num: 200
-train:
-  local_update_steps: 2
-  batch_or_epoch: epoch
-  optimizer:
-    lr: 0.1
-    weight_decay: 0.0
 data:
   root: data/
   type: femnist
-  # form: dataloader
   splits: [0.6,0.2,0.2]
   subsample: 0.05
   transform: [['ToTensor'], ['Normalize', {'mean': [0.9637], 'std': [0.1592]}]]
@@ -28,6 +21,14 @@ model:
   type: convnet2
   hidden: 2048
   out_channels: 62
+train:
+  local_update_steps: 2
+  batch_or_epoch: epoch
+  optimizer:
+    lr: 0.1
+    weight_decay: 0.0
+grad:
+  grad_clip: 5.0
 criterion:
   type: CrossEntropyLoss
 trainer:
@@ -36,8 +37,6 @@ eval:
   freq: 1
   split: ['test', 'val']
   metrics: ['acc', 'correct', 'poison_attack_acc']
-  # split: ['test', 'val', 'poison']
-  # metrics: ['acc', 'correct']
 attack:
   setting: 'fix'
   freq: 10
